# myComfyUIAgent

./: README.MD  main.py  pyproject.toml  requirements.txt
flow_file/: video_wan2_2_14B_i2v_api.json  video_wan2_2_5B_ti2v.json
src/: main.py
src/comfyui/: __init__.py  routes.py  service.py
test/: test.py
